--- a/.devcontainer/dockerfile
+++ b/.devcontainer/dockerfile
@@ -4,4 +4,5 @@ FROM mcr.microsoft.com/devcontainers/rust:1-1-bullseye
 RUN apt-get update && apt-get install -y \
     libudev-dev \
     libasound2-dev \
-    lld
+    lld \
+    fswatch
